chore: cleanup & add multi app push config
